# inventor-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_notes.md
examples/: README.md  imd254_shaft.py  smoke_test.py  turbocharger.py
inventor_ai/: __init__.py  api.py  server.py
