[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inventor-ai"
version = "0.1.0"
description = "Drive Autodesk Inventor 2026 from Claude or any MCP client (30 tools: parts, assemblies, constraints, exports)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "inventor", "autodesk", "cad", "claude", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=2.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
inventor-ai = "inventor_ai.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["inventor_ai"]
